@@ -493,9 +493,9 @@ class StudentStudent(models.Model):
             school_standard_search_ids = school_standard_obj.search(domain)
             if not school_standard_search_ids:
                 raise except_orm(_('Warning'),
-                                 _('The standard is not defined'
-                                   'in a school'))
-            student_search_ids = self.search(domain)
+                                 _('''The standard is not defined
+                                   in a school'''))
+            student_search_ids = self.search(domain, order="name")
             number = 1
             for rec in student_search_ids:
                 number += 1
